# project-euler

./: pyproject.toml
project_euler/: EulerModule.py  euler_01.py  euler_02.py  euler_03.py  euler_04.py  euler_05.py  euler_06.py  euler_07.py  euler_08.py  euler_09.py  euler_10.py  euler_11.py  euler_12.py  euler_13.py  euler_14.py  euler_15.py  euler_16.py  euler_17.py  euler_18.py  euler_2.py  euler_20.py  euler_21.py  euler_23.py  euler_3.py  euler_4.py
solutions/: euler_01.txt  euler_02.txt  euler_03.txt  euler_04.txt  euler_06.txt  euler_07.txt  euler_08.txt  euler_09.txt
testData/: euler_01.txt  euler_02.txt  euler_03.txt  euler_04.txt  euler_06.txt  euler_07.txt  euler_08.txt  euler_09.txt  euler_10.txt
tests/: euler_01_test.py  euler_02_test.py  euler_03_test.py  euler_04_test.py  euler_05_test.py  euler_06_test.py  euler_07_test.py  euler_08_test.py  euler_09_test.py  euler_10_test.py  euler_11_test.py
