[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["luisggon <luisggon@flyde.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
